# rubik

./: LICENSE  input.txt
go/: .gitignore  CMakeLists.txt  base.h  command.cpp  command.h  crc64.cpp  cube.cpp  cube.h  cube_parser.cpp  cube_solver.cpp  cube_solver.cpp.cpp  cube_turn.cpp  env.cpp  env.h  main.cpp
go/test/: 1-parser  1-parser-expected  2-turns  2-turns-expected  3-solver  3-solver-expected  run.py
